--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+* {
+  font-family: "Outfit", serif;
+}
 .search_wrapper {
   display: flex;
   align-items: center;
