--- a/src/routes/recept/[id]/recept.scss
+++ b/src/routes/recept/[id]/recept.scss
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+* {
+  font-family: "Outfit", serif;
+}
 .switch_component {
   display: flex;
   align-items: center;
