--- a/src/routes/index.scss
+++ b/src/routes/index.scss
@@ -105,7 +105,9 @@ body {
       justify-content: flex-start;
       flex-direction: column;
       width: 100%;
-      gap: 5px;
+      p {
+        margin: 5px;
+      }
       input,
       textarea {
         box-shadow: 0px 2px 3px -1px rgba(0, 0, 0, 0.1),
@@ -113,7 +115,7 @@ body {
           0px 0px 0px 1px rgba(25, 28, 33, 0.08);
         border-radius: 50px;
         border: 0;
-        width: 100%;
+        width: 95%;
         padding: 10px;
       }
       textarea {
